--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\Scripts\Enemies\SimpleEnemy.cs" />
     <Compile Include="Assets\Scripts\Level.cs" />
     <Compile Include="Assets\Scripts\Creature.cs" />
+    <Compile Include="Assets\Scripts\UI\PopupGroup.cs" />
     <Compile Include="Assets\Scripts\UI\Zone.cs" />
     <Compile Include="Assets\Scripts\UI\FXContainer.cs" />
     <Compile Include="Assets\Scripts\Behaviours\Actions\FocusRange.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Assets\Scripts\UI\LevelNode.cs" />
     <Compile Include="Assets\Libs\PathCreator\Examples\Scripts\RoadMeshCreator.cs" />
     <Compile Include="Assets\Scripts\UI\DamageBubble.cs" />
+    <Compile Include="Assets\Scripts\UI\PlayerInfoDisplayController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Libs\EnhancedScroller v2\upgrading from 1.x to 2.x.txt" />
